# NIZKP-Benchmark

./: README.md
go/: go.mod  go.sum  main.go
go/internal/hash/: mimc.go  mimc_test.go
go/internal/zksig/: ecdsa.go  ecdsa_test.go  eddsa.go  eddsa_test.go
rust/: Cargo.toml
rust/benches/: bulletproof_mimc_bench.rs  mimc_bench.rs  snark_mimc_bench.rs  stark_mimc_bench.rs
rust/src/: hash.rs  main.rs
rust/src/hash/: mimc.rs
rust/src/hash/mimc/: bulletproof.rs  snark.rs  stark.rs
